long press listener error pdf work started-1

--- a/app/src/main/res/layout/activity_renti_list_view.xml
+++ b/app/src/main/res/layout/activity_renti_list_view.xml
@@ -8,25 +8,24 @@
     tools:context=".activity.renti_list_view">
 
     <LinearLayout
+        android:id="@+id/ui"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:id="@+id/ui"
-        android:orientation="horizontal">
+        android:background="@color/colorPrimary">
 
         <ImageView
+            android:id="@+id/back"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
-            android:id="@+id/back"
-            android:src="@drawable/ic_back"/>
+            android:src="@drawable/ic_back" />
 
         <ImageView
+            android:id="@+id/logo"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:id="@+id/logo"
-            android:src="@drawable/ic_hotel_key"/>
+            android:src="@drawable/ic_hotel_key" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,7 +33,21 @@
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:text="@string/list"
-            android:textSize="25sp"/>
+            android:textSize="25sp" />
+
+        <ImageView
+            android:id="@+id/reload"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_reload" />
+
+        <ImageView
+            android:id="@+id/delete"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_delete_black_24dp" />
 
     </LinearLayout>
 
